# ClaudeFlow

./: .coverage  .gitignore  CLAUDE.md  README.md  pom.xml  pyproject.toml  quick_verify.sh  verify_cli_driver.py
.super-dev/: WORKFLOW.md  install-manifest.json  pipeline-state.json  roles.yaml
console/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
console/e2e/: create-task-flow.spec.ts  intervene-flow.spec.ts  sse-progress.spec.ts
console/src/: App.vue  main.ts
console/tests/: Dashboard.spec.ts  ProgressStream.spec.ts  RuntimeConsole.spec.ts  StatsCard.spec.ts  TaskDetail.spec.ts  WorkflowProgress.spec.ts  runtimeActionAudit.spec.ts  runtimeLiveDataValidation.spec.ts  runtimeValidator.spec.ts
docs/: 01_通信层设计.md  02_Agent提炼机制设计.md  04_强制checkpoint机制设计.md  06_Claude_Code输出格式规范.md  07_V2设计问题清单.md  09_Runtime实现与变更记录.md  INDEX.md  README.md  README_V1.md  spec.md  v1_development_prompt.md
docs/operations/: delivery-summary-template.md  oneapi-deployment.md  release-checklist.md  (+5 more)
examples/: runtime-dispatch.sample.json  runtime-dispatch.schema.json  runtime-events.sample.json  runtime-events.schema.json  runtime-explain.sample.json  runtime-explain.schema.json  runtime-plan.sample.json  runtime-plan.schema.json  runtime-sessions.sample.json  runtime-sessions.schema.json  runtime-status.sample.json  runtime-status.schema.json  task-graph.sample.json  task-graph.schema.json
knowledge/: reviews_index.json
output/: delivery-summary-phase-5.md  phase-2-acceptance-scope-checklist.md  phase-6-rollout-flow.md  release-notes-phase-5.md
prompts/: 00_create_github_repo.md  01_v1_development.md  02_v1_acceptance.md  03_v2_extension.md
scripts/: run-release-gates.sh  runtime_smoke.py  verify-doc-consistency.sh
(+329 files in other folders)
